Feb 10. Primer intento con mongodb

--- a/ProyectoClase/proyectobe/.env.template
+++ b/ProyectoClase/proyectobe/.env.template
@@ -1,3 +1,4 @@
 DB_FILENAME = a_db_name
 MIGRATE=true
 API_TOKEN=token 
+MONGOURI=mongodb+srv://<username>:<password>@proyectoclase2022.bvgzi.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
