--- a/ProyectoClase/proyectobe/.env.template
+++ b/ProyectoClase/proyectobe/.env.template
@@ -2,3 +2,5 @@ DB_FILENAME = a_db_name
 MIGRATE=true
 API_TOKEN=token 
 MONGOURI=mongodb+srv://<username>:<password>@proyectoclase2022.bvgzi.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+JWT_SECRET = secret
+CORS_ORIGIN = http://localhost:300X
